# PrimeStage

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/: pull_request_template.md
.github/workflows/: presubmit.yml
cmake/: PrimeStageConfig.cmake.in  PrimeStageVersion.h.in
docs/: 5-minute-app.md  accessibility-semantics-roadmap.md  advanced-escape-hatches.md  api-ergonomics-guidelines.md  api-ergonomics-scorecard.md  api-evolution-policy.md  architecture-size-guardrails.md  build-artifact-hygiene.md  callback-reentrancy-threading.md  cmake-packaging.md  data-ownership-lifetime.md  default-widget-behavior-matrix.md  dependency-resolution-policy.md  design-decisions.md  example-app-consumer-checklist.md  ime-composition-plan.md  minimal-api-reference.md  performance-benchmarks.md  prime-stage-design.md  render-diagnostics.md  semantic-callback-migration.md  todo.md  visual-test-harness.md  widget-api-review-checklist.md  widget-spec-defaults-audit.md
examples/: primestage_modern_api.cpp  primestage_render_demo.cpp  primestage_scene.cpp  primestage_widgets.cpp  primestage_widgets_demo.cpp
examples/advanced/: primestage_scene.cpp  primestage_widgets.cpp
examples/canonical/: primestage_example.cpp
include/PrimeStage/: App.h  AppRuntime.h  InputBridge.h  PrimeStage.h  Render.h  StudioUi.h  StudioUiMethods.h  StudioUiMethods.inl  StudioUiTypes.h  TextSelection.h  Ui.h
scripts/: clean.sh  compile.sh  lint_architecture_size.sh  lint_canonical_api_surface.sh
src/: App.cpp  PrimeStage.cpp  PrimeStageBooleanWidgets.cpp  PrimeStageButton.cpp  PrimeStageCollectionInternals.h  PrimeStageCollections.cpp  PrimeStageContainers.cpp  PrimeStageDropdown.cpp  PrimeStageLabel.cpp  PrimeStageLayoutPrimitives.cpp  PrimeStageLowLevel.cpp  PrimeStageParagraph.cpp  PrimeStageProgress.cpp  PrimeStageSelectableText.cpp  PrimeStageSlider.cpp  PrimeStageTable.cpp  PrimeStageTabs.cpp  PrimeStageTextField.cpp  PrimeStageTextInteraction.cpp  PrimeStageTextLine.cpp  PrimeStageTextSelectionOverlay.cpp  PrimeStageTreeView.cpp  PrimeStageWindow.cpp  Render.cpp
tests/cmake/: run_find_package_smoke.cmake
tests/cmake/find_package_smoke/: CMakeLists.txt  main.cpp
tests/perf/: PrimeStage_benchmarks.cpp  perf_budgets.txt
tests/snapshots/: default_theme_readability.snap  interaction_visuals.snap
tests/unit/: test_api_ergonomics.cpp  test_app_runtime.cpp  test_builder.cpp  test_builder_api.cpp  test_end_to_end_ergonomics.cpp  test_focus_compositing.cpp  test_focus_widgets.cpp  test_input_bridge.cpp  test_integration_flows.cpp  test_interaction.cpp  test_render.cpp  test_sanity.cpp  test_spec_validation.cpp  test_state_machine_fuzz.cpp  test_tabs_dropdown.cpp  test_text_field.cpp  test_text_selection.cpp  test_text_selection_layout.cpp  test_tree_view.cpp  test_treeview_input.cpp  test_visual_regression.cpp  test_widget_identity.cpp  test_widget_visual_facility.cpp  test_widgets.cpp  test_widgets_demo_regression.cpp  visual_test_harness.h
tests/unit/input_replay/: invalid_trace.trace  mixed_input.trace  scroll_direction.trace
